--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "orchestra/testbench": "^7.1",
+    "orchestra/testbench": "v6.24 || ^7.1",
     "mockery/mockery": "^1.4.4",
     "phpunit/phpunit": "^9.5.10",
     "squizlabs/php_codesniffer": "^3.6"
