--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "test": "vendor/bin/phpunit",
     "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
     "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-    "test:coverage": "phpunit --coverage-text --coverage-clover=coverage.clover"
+    "test:coverage": "vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover"
   },
   "extra": {
     "laravel": {
