--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
   "require": {
     "php": ">=7.4",
     "guzzlehttp/guzzle": "^7.2|^7.0.1",
-    "illuminate/notifications": "^8.0 || ^9.0",
-    "illuminate/support": "^8.0 || ^9.0",
-    "illuminate/http": "^8.0 || ^9.0",
+    "illuminate/notifications": "^8.0|^9.0|~10.0",
+    "illuminate/support": "^8.0|^9.0|~10.0",
+    "illuminate/http": "^8.0|^9.0|~10.0",
     "ext-json": "*"
   },
   "require-dev": {
-    "orchestra/testbench": "v6.24 || ^7.1",
+    "orchestra/testbench": "v6.24|^7.1|^8.0",
     "mockery/mockery": "^1.4.4",
     "phpunit/phpunit": "^9.5.10",
     "squizlabs/php_codesniffer": "^3.6"
