--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,16 @@
   ],
   "require": {
     "php": ">=7.4",
+    "ext-json": "*",
     "guzzlehttp/guzzle": "^7.2|^7.0.1",
-    "illuminate/notifications": "^8.0|^9.0|~10.0",
-    "illuminate/support": "^8.0|^9.0|~10.0",
-    "illuminate/http": "^8.0|^9.0|~10.0",
-    "ext-json": "*"
+    "illuminate/notifications": "^8.0|^9.0|^10.0|^11.0",
+    "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
+    "illuminate/http": "^8.0|^9.0|^10.0|^11.0"
   },
   "require-dev": {
-    "orchestra/testbench": "v6.24|^7.1|^8.0",
+    "orchestra/testbench": "v6.24|^7.1|^8.0|^9.0",
     "mockery/mockery": "^1.4.4",
-    "phpunit/phpunit": "^9.5.10",
+    "phpunit/phpunit": "^9.5.10|^10.0",
     "squizlabs/php_codesniffer": "^3.6"
   },
   "autoload": {
