--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "illuminate/http": "^8.0|^9.0|^10.0|^11.0"
   },
   "require-dev": {
-    "orchestra/testbench": "v6.24|^7.1|^8.0|^9.0",
+    "orchestra/testbench": "6.24|^7.1|^8.0|^9.0",
     "mockery/mockery": "^1.4.4",
     "phpunit/phpunit": "^9.5.10|^10.0",
     "squizlabs/php_codesniffer": "^3.6"
