--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,11 @@
     "illuminate/http": "^8.0|^9.0|^10.0|^11.0"
   },
   "require-dev": {
-    "orchestra/testbench": "6.24|^7.1|^8.0|^9.0",
     "mockery/mockery": "^1.4.4",
-    "phpunit/phpunit": "^9.5.10|^10.0",
+    "orchestra/testbench": "6.24|^7.1|^8.0|^9.0",
+    "pestphp/pest": "^2.34.9",
+    "pestphp/pest-plugin-laravel": "^2.4",
+    "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^3.6"
   },
   "autoload": {
@@ -49,7 +51,10 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true
