--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,23 +13,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ 7.4, 8.0, 8.1, 8.2, 8.3 ]
-        laravel: [ 8, 9, 10, 11 ]
+        php: [ 8.1, 8.2, 8.3 ]
+        laravel: [ 9, 10, 11 ]
         stability: [ prefer-lowest, prefer-stable ]
         exclude:
           - php: 8.1
             laravel: 11
-          - php: 8.0
-            laravel: 11
-          - php: 7.4
-            laravel: 11
-          - php: 8.0
-            laravel: 10
-          - php: 7.4
-            laravel: 10
-          - php: 7.4
-            laravel: 9
-            
+
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} (${{ matrix.stability }})
 
