--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "macellan/onesignal",
   "description": "OneSignal notifications channel for Laravel",
-  "homepage": "http://macellan.net/",
+  "homepage": "https://macellan.net/",
   "license": "MIT",
   "authors": [
     {
@@ -12,16 +12,16 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": "^8.1",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^7.2|^7.0.1",
-    "illuminate/notifications": "^8.0|^9.0|^10.0|^11.0",
-    "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
-    "illuminate/http": "^8.0|^9.0|^10.0|^11.0"
+    "guzzlehttp/guzzle": "^7.2",
+    "illuminate/notifications": "^9.0|^10.0|^11.0",
+    "illuminate/support": "^9.0|^10.0|^11.0",
+    "illuminate/http": "^9.0|^10.0|^11.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.4.4",
-    "orchestra/testbench": "6.24|^7.1|^8.0|^9.0",
+    "orchestra/testbench": "^7.1|^8.0|^9.0",
     "pestphp/pest": "^2.34.9",
     "pestphp/pest-plugin-laravel": "^2.4",
     "roave/security-advisories": "dev-latest",
