update composer scripts & code quality tools

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 node_modules/
 npm-debug.log
 yarn-error.log
-
 .phpunit.result.cache
 .idea
 .DS_Store
 composer.lock
+build
+coverage/
+coverage.clover
