--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
     "illuminate/http": "^9.0|^10.0|^11.0"
   },
   "require-dev": {
+    "laravel/framework": "^9.0|^10.0|^11.0",
+    "larastan/larastan": "^2.9",
+    "laravel/pint": "^1.17",
     "mockery/mockery": "^1.4.4",
     "orchestra/testbench": "^7.1|^8.0|^9.0",
     "pestphp/pest": "^2.34.9",
@@ -38,10 +41,23 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit",
-    "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-    "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-    "test:coverage": "vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover"
+    "test:phpcs": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+    "test:phpcs:fix": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+    "test:types": "phpstan analyse --ansi",
+    "test:pint": "pint --test",
+    "test:pint:fix": "pint",
+    "test:unit": "vendor/bin/pest --parallel",
+    "test:coverage": "vendor/bin/pest --parallel --coverage-text --coverage-clover=coverage.clover",
+    "test:coverage:html": "vendor/bin/pest --parallel --coverage-html coverage",
+    "test:style": [
+      "@test:pint:fix",
+      "@test:phpcs",
+      "@test:types"
+    ],
+    "test": [
+      "@test:style",
+      "@test:unit"
+    ]
   },
   "extra": {
     "laravel": {
