--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "laravel/pint": "^1.17",
     "mockery/mockery": "^1.4.4",
     "orchestra/testbench": "^7.1|^8.0|^9.0",
-    "pestphp/pest": "^2.34.9",
-    "pestphp/pest-plugin-laravel": "^2.4",
+    "pestphp/pest": "^1.23.1|^2.34.9",
+    "pestphp/pest-plugin-laravel": "^1.4.0|^2.4",
     "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^3.6"
   },
