--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "macellan/onesignal",
   "description": "OneSignal notifications channel for Laravel",
-  "homepage": "http://macellan.net/",
+  "homepage": "https://macellan.net/",
   "license": "MIT",
   "authors": [
     {
@@ -12,17 +12,22 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": "^8.1",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^7.2|^7.0.1",
-    "illuminate/notifications": "^8.0|^9.0|^10.0|^11.0",
-    "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
-    "illuminate/http": "^8.0|^9.0|^10.0|^11.0"
+    "guzzlehttp/guzzle": "^7.2",
+    "illuminate/notifications": "^9.0|^10.0|^11.0",
+    "illuminate/support": "^9.0|^10.0|^11.0",
+    "illuminate/http": "^9.0|^10.0|^11.0"
   },
   "require-dev": {
-    "orchestra/testbench": "6.24|^7.1|^8.0|^9.0",
+    "laravel/framework": "^9.0|^10.0|^11.0",
+    "larastan/larastan": "^2.9",
+    "laravel/pint": "^1.17",
     "mockery/mockery": "^1.4.4",
-    "phpunit/phpunit": "^9.5.10|^10.0",
+    "orchestra/testbench": "^7.1|^8.0|^9.0",
+    "pestphp/pest": "^1.23.1|^2.34.9",
+    "pestphp/pest-plugin-laravel": "^1.4.0|^2.4",
+    "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^3.6"
   },
   "autoload": {
@@ -36,10 +41,23 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit",
-    "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-    "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-    "test:coverage": "vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover"
+    "test:phpcs": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+    "test:phpcs:fix": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+    "test:types": "phpstan analyse --ansi",
+    "test:pint": "pint --test",
+    "test:pint:fix": "pint",
+    "test:unit": "vendor/bin/pest",
+    "test:coverage": "vendor/bin/pest --coverage-text --coverage-clover=coverage.clover",
+    "test:coverage:html": "vendor/bin/pest --coverage-html coverage",
+    "test:style": [
+      "@test:pint:fix",
+      "@test:phpcs",
+      "@test:types"
+    ],
+    "test": [
+      "@test:style",
+      "@test:unit"
+    ]
   },
   "extra": {
     "laravel": {
@@ -49,7 +67,10 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true
