--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,8 @@ jobs:
         php: [ 8.2, 8.3, 8.4 ]
         laravel: [ 12 ]
         stability: [ prefer-lowest, prefer-stable ]
-
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} (${{ matrix.stability }})
+    
+    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} ${{ matrix.stability == 'prefer-stable' && '↑' || '↓' }}
 
     steps:
       - name: Checkout code
