--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,15 +13,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ 8.1, 8.2, 8.3 ]
-        laravel: [ 9, 10, 11 ]
+        php: [ 8.2, 8.3, 8.4 ]
+        laravel: [ 12 ]
         stability: [ prefer-lowest, prefer-stable ]
-        exclude:
-          - php: 8.1
-            laravel: 11
-
-
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} (${{ matrix.stability }})
+    
+    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} ${{ matrix.stability == 'prefer-stable' && '↑' || '↓' }}
 
     steps:
       - name: Checkout code
@@ -34,12 +30,6 @@ jobs:
           extensions: dom, curl, json, libxml, mbstring, zip
           tools: composer:v2
           coverage: none
-
-      # https://github.com/briannesbitt/Carbon/releases/tag/2.62.1
-      - name: Patch Carbon version
-        if: matrix.php == 8.2 || matrix.php == 8.3
-        run: |
-          composer require "nesbot/carbon=^2.63" --dev --no-interaction --no-update
 
       - name: Install dependencies
         run: |
